bash/azure/manifests/blog-ingress-and-issuer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.decomposingsoftware.com
    - decomposingsoftware.com
    secretName: blog-tls
  rules:
  - host: www.decomposingsoftware.com
    http:
     paths:
     - backend:
         serviceName: blog-ghost
         servicePort: 80
