bash/azure/manifests/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
      kubernetes.io/tls-acme: "true"
      kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dashboard.reifnir.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
